# brightspace-assessment-rename

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/brightspace_assessment_rename/: __init__.py  __main__.py  main.py  renamer.py
tests/: __init__.py  test_renamer.py
